--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/markdown-it": "^10.0.3",
+    "markdown-it": "12.0.3",
+    "axios": "^0.20.0",
+    "bootstrap": "^5.0.0-alpha1",
+    "css-loader": "^5.0.1",
+    "mitt": "^2.1.0",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
